--- a/Hotel.Client/appsettings.json
+++ b/Hotel.Client/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "HotelConnectionString": "Server=localhost,1433;Database=HotelSystemExample;User Id=sa;Password=J@ss0n___123;TrustServerCertificate=True;"
+  }
 }
