--- a/Hotel.Api/Hotel.Api.csproj
+++ b/Hotel.Api/Hotel.Api.csproj
@@ -14,4 +14,9 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Hotel.Core\Hotel.Core.csproj" />
+    <ProjectReference Include="..\Hotel.Infraestructure\Hotel.Infraestructure.csproj" />
+  </ItemGroup>
+
 </Project>
